--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,10 @@
 }
 
 body{
-    background: #565555;
+    background: #000000;
 }
 
 .banner{
-    position: absolute;
     width: 100%;
     min-height: 100vh;
     padding: 0 100px;
@@ -120,3 +119,30 @@ body{
 .banner .content .button a:hover:nth-child(2){
     background: red;
 }
+
+.banner .carousel-box{
+    position: relative;
+    min-width: 950px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.swiper {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  
+  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+  }
